Fixed z-indexing

--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -14,6 +14,7 @@
     cursor: default;
     text-align: center;
     background-color: white;
+    z-index: 1;
 
     &__header {
         padding: 3em;
